app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "bootstrap-responsive";



/* mixins, variables, etc. */

$grayMediumLight: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing: border-box; 
  -webkit-box-sizing: border-box; 
  box-sizing: border-box;
}

/* universal */

.container {
    
  width: 100%;

}

html {
  overflow-y: scroll;
}




body {
  font-family: "freight-sans-pro", Helvetica, Arial, sans-serif;

  
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}



/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.7em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $grayLight;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}


/* header */


.navbar-inner {
  background-color: white; /* background color will be black for all browsers */
  background-image: none;
  background-repeat: no-repeat;
  filter: none;


}



.jlogo {
  margin-top: -5px;
  margin-left: 1%;
}

.navbar .nav li {
  margin-top: 8px;
      a {
    color: #333;
    text-decoration: none;
    font-weight: bold;

      @media (max-width: 480px) { 
        font-size: 13px;
        
 
}
@media (min-width: 481px) { 

}
    
    }
    a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: bold;
    }

    .hidden-phone {
        margin-top: 8px;
      a {
    color: #3B5998;
    text-decoration: none;
    font-weight: bold;
    }
    a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: bold;
    }

    }
}

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 11px;
  font-weight: bold;
  line-height: 1;
  &:hover {
    color: white;
    text-decoration: none;
  }
}

.header_search_box {
  margin-top: 6px;
  width: 110px;
}

/* footer */



/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */

aside {
  section {
    padding: 10px 0;
    border-top: 1px solid $grayLighter;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1 {
      font-size: 1.6em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
    }
  }
}

.gravatar {
  float: left;
  margin-right: 10px;
}

.stats {
  overflow: auto;
  a {
    float: left;
    padding: 0 10px;
    border-left: 1px solid $grayLighter;
    color: #3B5998;
    
    &:first-child {
      padding-left: 0;
      border: 0;
    }

    &:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: bold;
    }

  }
  strong {
    display: block;
  }
}

.user_avatars {
  overflow: auto;
  margin-top: 10px;
  .gravatar {
    margin: 1px 1px;
  }
}

/* forms */

#follow_button {
  display: inline-block;

}

#follow-form {
  display: inline-block;
}

.form-inline {

}

.form-horizontal .controls {
  margin-left: 10px;
}


#form_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 1px;

}

#post_box{
  display: inline-block;
  width: 140px;
  margin-left: 0px;
  
}

#select_box{
  display: inline-block;
  width: 62px;
  margin-left: 10px;


}

#button_box{
  display: inline-block;
  margin-left: 0px;
  float: left;


}

#privacy_checkboxes {
  margin-bottom: 20px;
  width: 150px;
}

#repost_privacy_checkboxes {
  margin-bottom: 20px;
  margin-top: 20px;
  margin-left: 40px;
}

.user_show .nav-tabs {
  margin-top: 20px;
  margin-bottom: 0px;
}

input, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  padding: 10px;
  height: auto;
  margin-bottom: 15px;
  font-size: 30px;


}
textarea, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  padding: 10px;
  height: auto;
  margin-bottom: 15px;

}
 select, .uneditable-input {

  width: 100%;
  margin-left: 0%;



}

.btn-posting {
  margin-left: 0px;

}

#error_explanation {
  color:#f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
 }

 /* users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-top: 1px solid $grayLighter;
    &:last-child {
      border-bottom: 1px solid $grayLighter;
    }
  }
}

/* microposts */

.microposts {
  list-style: none;
  margin: 0px 0 0 0;

  li {
    padding: 20px 0 10px;
    border-bottom: 1px solid #F1F7FA

  


  }
}

.profile_image {
  margin-left: 8px;
}

.profile_microposts {
  list-style: none;
  margin: 0px 0 0 0;

  li {
    padding: 20px 0 20px;
    border-bottom: 1px solid #F1F7FA

  


  }
}

.editable_topic {
    
    color: #3B5998;
    font-weight: normal;
       
}

.edit_topic {
    
    color: $red;
    font-weight: bold;
       
}

.content {
  display: block;
}

.timestamp {
  font-size: 12px;
  color: $grayLight;
      a {
    color: #6D84B4;
    text-decoration: none;
    font-weight: normal;
    }
    a:hover {
    color: #6D84B4;
    font-weight: normal;
    text-decoration: underline;
    
    }

}

.article_timestamp {
  line-height: 28px;
  color: $grayLight;
      a {
    color: #6D84B4;
    text-decoration: none;
    font-weight: normal;
    }
    a:hover {
    color: #6D84B4;
    font-weight: normal;
    text-decoration: underline;
    
    }

}


.teaser {
  font-size: 12px;
  color: $grayDark;
      a {
    color: #6D84B4;
    text-decoration: none;
    font-weight: normal;
    }
    a:hover {
    color: #6D84B4;
    font-weight: normal;
    text-decoration: underline;
    
    }

}


.new_articles {
  font-size: 12px;
  color: $grayLight;
      a {
    color: #6D84B4;
    text-decoration: none;
    font-weight: bold;
    }
    a:hover {
    color: #6D84B4;
    font-weight: bold;
    text-decoration: underline;
    
    }

}

aside {
  textarea {
    height: 100px;
    margin-bottom: 5px;
  }
}

#post_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 4px;

}

#user_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 5px;


}

#author_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 0px;


}

#feed_item_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 22px;
 

}

#post_text {
  margin-left: 5px;
  display: inline-block;
  width: 62%;


}

#post_user {
  margin-left: 5px;
  display: inline-block;
  width: 70%;
  margin-bottom: 10px;


}

#item_text {
  @media (max-width: 480px) { 
  margin-left: 0px;
  display: inline-block;
  width: 99%;
  margin-bottom: 0px;
}
@media (min-width: 481px) { 
  margin-left: 5px;
  display: inline-block;
  width: 80%;
  margin-bottom: 0px;
}

}
.upper_section {
  margin-left: 5px;
}


#user_item_text {
  @media (max-width: 480px) { 
  margin-left: 5px;
  display: inline-block;
  width: 86%;
  margin-bottom: 0px;
}
@media (min-width: 481px) { 
  margin-left: 5px;
  display: inline-block;
  width: 60%;
  margin-bottom: 0px;
}

}

#author_text {
  @media (max-width: 480px) { 
  margin-left: 0px;
  display: inline-block;
  width: 80%;
  margin-bottom: 0px;
}
@media (min-width: 481px) { 
  margin-left: 5px;
  display: inline-block;
  width: 70%;
  margin-bottom: 0px;
}

}



#comment_text {
  margin-left: 5px;
  display: inline-block;
  width: 89%;
  margin-bottom: 10px;


}

#message_text {
  margin-left: 5px;
  display: inline-block;
  width: 89%;
  height: 200px;
  margin-bottom: 10px;
}

.comment {
  border-bottom: 1px solid #F1F7FA;
  margin-bottom: 5px;
  padding: 5px 0px;
}

#comment_field {
  margin-left: 5px;
  display: inline-block;
  width: 80%;
}

#comment_image {
  display: inline-block;
  vertical-align: top;
  margin-top: 0px;


}


#star {
    display: inline-block;
    float: right;
  
  
}


#favorite_posts {




        @media (max-width: 480px) { 

 
}
@media (min-width: 481px) { 

    border: 1px solid $grayLighter;
 
  margin-top: 0px;
  
  
  padding: 6px 8px 0px;

-webkit-border-radius: 4px;

  border-radius: 4px;
-webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);

box-shadow: 0 0px 0px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
         

}



}



#starred_authors {

  border: 1px solid $grayLighter;
 
  margin-top: 0px;

  
  padding: 6px 8px 0px;
  -moz-border-radius: 6px;
  border-radius: 6px;
 

}

#subscribed_authors {
  margin-top: 20px;

  padding: 6px 8px 5px;


}

#latest_posts {

        @media (max-width: 480px) { 

 
}
@media (min-width: 481px) { 
         padding: 6px 8px 5px;

}
 
  


}


/* stagely */

body {
    font-family: "freight-sans-pro", Helvetica, Arial, sans-serif;
    background-color: #FFFFFF;
    color: #333333;
    line-height: 1.38;

      @media (max-width: 480px) { 
        font-size: 15px;
        line-height: 1.8;
 
}
@media (min-width: 481px) { 
          font-size: 14px;
        line-height: 1.5;

}

    a {
    font-family: "freight-sans-pro", Helvetica, Arial, sans-serif;
    color: #3B5998;
    text-decoration: none;
    font-weight: bold;
    }
    a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: bold;
    }

      .rsvp {
        float: left;
        a {
          font-weight: normal;
        }
      }

      .subtext {
      font-size: 11px;
    line-height: 1.28;
    }

          .user {
      font-weight: normal;
    line-height: 1.28;
      color: #000000;
       a {
          color: #333;
          font-weight: bold;
        }
            a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: bold;
    }


    }




    .all_comments_link {
          a {
    color: #3B5998;
    text-decoration: none;
    font-weight: normal;
    }
    a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: normal;
    }

    }

#comments_symbol {
  display: inline-block;

          a {
    color: #3B5998;
    text-decoration: none;
    font-weight: normal;
    }
    a:hover {
    color: #3B5998;
    text-decoration: underline;
    font-weight: normal;
    }

   
}
}

.todays_actions {
  font-size: 12px;
    line-height: 28px;
  color: $grayLight;
      a {
        font-size: 14px;
    color: #3B5998;
    text-decoration: none;
    font-weight: bold;
    }
    a:hover {
      font-size: 14px;
    color: #3B5998;
    font-weight: normal;
    text-decoration: underline;
    
    }
}


input {

}

.controls .text {
height: 18px;
width: 55%;
}

footer {
font-size: 12px;
text-align: center;
margin-top: 50px;
margin-bottom: 20px


}

.center {
  margin-top: 60px;
}

#faqs .handle {
  font-size: 12px;
  color: #777;
  cursor: move;
}

.alert {
  font-size: 18px;
}

.handle:hover{cursor: move;}

.fb-comments, .fb-comments span[style], .fb-comments iframe[style] {width: 100% !important;}

.fb-like {
  margin-top: 9px;
  padding-left: 15px;
}

